--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Welcome! My name is Jason Williams; I'm a young professional in the Information Security field with the goal of becoming the biggest "know-it-all" there is. Before college, I was so invested in music that I nearly went to the University of Southern Mississippi to major in it. Though my decision changed, it is still one of my passions, and I still play piano in my spare time. Outside of work, I'd either be found playing computer games with my friends, or in the gym working to get a bench press that would be impressive enough to share on my personal website.
+                        Welcome! My name is Jason Williams; I'm a young professional in the Information Security field with the goal of becoming the biggest "know-it-all" there is. Before college, I was a band geek that was so invested in music that I nearly went to school to major in it. Though my decision changed, it is still one of my passions, and I still play piano in my spare time. My current career goal is to pass the CISSP exam by the end of Summer 2019, and then continue pwning machines on HackTheBox.eu until I think I'm ready to start preparing to be an Offensive Security Certified Professonal (OSCP).
                     </p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
         <div id="experience-timeline">
             <div data-date="December 2018 - Present">
                 <h3>Defense Point Security</h3>
-                <h4>SOC Analyst</h4>
+                <h4>Junior Cyber Defense Analyst</h4>
                 <p>
                     This position involved the use of numerous Network Monitoring tools to review and respond to various alerts for our clients. All of our clients had a Splunk instance that would be used to triage potential incidents, and other clients had additional security tools like RSA Netwitness and FireEye AX/HX/NX. A usual day at DPS could involve detecting and responding to DoS/DDoS attacks, determining if an endpoint has malware, or investigating ongoing phishing campaigns against our customers. Most notable alerts would require the creation of a report and actionable remediation tactics.
                 </p>
@@ -121,6 +121,14 @@
                 My degree at Louisiana State University had a concentration in Data Science and Analytics, and my GPA was a 3.4 by graduation. I took a variety of electives to round myself out. The two Cybersecurity courses I took ultimately drove me to pursue it as a career.
             </p>
         </div>
+        <div class="education-block">
+            <h3>CompTIA</h3>
+            <span class="education-date">August 2018 - August 2021</span>
+            <h4>Security+ CE</h4>
+            <p>
+                Just before my last semester of college, I completed the Security+ certification to broaden my skills and make myself more marketable.
+            </p>
+        </div>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
@@ -131,15 +139,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/budget.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Budget Master</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            The most notable project I completed during school was an Android-based budgeting app. This app would allow users to create a budget for various categories and track how much money is being spent per category. We even thought about security </b>before</b> production, implementing a PIN authentation as well as challenge questions.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/scinerio/BudgetMaster">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -147,15 +155,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/paint.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Hue4You</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            In a course titled "Programming Digital Media," I created a web-based Javascript application that tests the brain by coloring a word like "brown" or "yellow" with an entirely different color, and the player had to select the button on a controller that was the colored with the color of the word, not the fill color. The controller was made with an Arduino, the graphics were made with Tone.js API, and the music was made using the Tone.js API.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/scinerio/Hue4You">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,12 +179,11 @@
             <li>Python</li>
             <li>Bash</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C++</li>
+            <li>C/C++</li>
+            <li>SQL</li>
             <li>Unix/Linux</li>
             <li>Networking</li>
             <li>Cybersecurity</li>
-            <li>OWASP Top 10</li>
             <li>Penetration Testing</li>
             <li>Vulnerability Scanning</li>
             <li>Firewalls</li>
@@ -186,6 +193,7 @@
             <li>SIEM</li>
             <li>Social Engineering</li>
             <li>Phishing</li>
+            <li>Wireshark</li>
         </ul>
     </div>
     <!-- End #skills -->
