--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Welcome! My name is Jason Williams; I'm a young professional in the Information Security field with the goal of becoming the biggest "know-it-all" there is. Before college, I was a band geek that was so invested in music that I nearly went to school to major in it. Though my decision changed, it is still one of my passions, and I still play piano in my spare time. My current career goal is to pass the CISSP exam by the end of Summer 2019, and then continue pwning machines on HackTheBox.eu until I think I'm ready to start preparing to be an Offensive Security Certified Professonal (OSCP).
+                        Welcome! My name is Jason Williams; I'm a young professional in the information security field with the goal of becoming the biggest "know-it-all" there is. Before college, I was a band geek that was so invested in music that I nearly went to school to major in it. Though my decision changed, it is still one of my passions, and I still play piano in my spare time. My current career goal is to pass the CISSP exam by the end of Summer 2019, and then continue pwning machines on HackTheBox.eu until I think I'm ready to start preparing to be an Offensive Security Certified Professonal (OSCP).
                     </p>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <h3>Defense Point Security</h3>
                 <h4>Junior Cyber Defense Analyst</h4>
                 <p>
-                    This position involved the use of numerous Network Monitoring tools to review and respond to various alerts for our clients. All of our clients had a Splunk instance that would be used to triage potential incidents, and other clients had additional security tools like RSA Netwitness and FireEye AX/HX/NX. A usual day at DPS could involve detecting and responding to DoS/DDoS attacks, determining if an endpoint has malware, or investigating ongoing phishing campaigns against our customers. Most notable alerts would require the creation of a report and actionable remediation tactics.
+                    This position involved the use of numerous network monitoring tools to review and respond to various alerts for our clients. All of our clients had a Splunk instance that would be used to triage potential incidents, and other clients had additional security tools like RSA Netwitness and FireEye AX/HX/NX. A usual day at DPS could involve detecting and responding to DoS/DDoS attacks, determining if an endpoint has malware, or investigating ongoing phishing campaigns against our customers. Most notable alerts would require the creation of a report and actionable remediation tactics.
                 </p>
             </div>
 
@@ -96,7 +96,7 @@
                 <h3>TraceSecurity</h3>
                 <h4>Associate Information Security Analyst</h4>
                 <p>
-                    My role at TraceSecurity was to provide various Cybersecurity services to a client-base predominately in the financial sector. This team would assist clients with Security Awareness by performing social engineering and phishing campaigns as well as assigning post-test training through a web application. We assisted clients with installing and using TraceSecurity's proprietary vulnerability scanning software. If a customer had an online presence, we would conduct penetration tests against external systems to look for vulnerabilities in the applications. Lastly, we would provide clients with a policy review to ensure that they were ISO-compliant.
+                    My role at TraceSecurity was to provide various cybersecurity services to a client-base predominately in the financial sector. This team would assist clients with security awareness by performing social engineering and phishing campaigns as well as assigning post-test training through a web application. We assisted clients with installing and using TraceSecurity's proprietary vulnerability scanning software. If a customer had an online presence, we would conduct penetration tests against external systems to look for vulnerabilities in the applications. Lastly, we would provide clients with a policy review to ensure that they were ISO-compliant.
                 </p>
             </div>
 
@@ -118,7 +118,7 @@
             <span class="education-date">August 2014 - December 2018</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <p>
-                My degree at Louisiana State University had a concentration in Data Science and Analytics, and my GPA was a 3.4 by graduation. I took a variety of electives to round myself out. The two Cybersecurity courses I took ultimately drove me to pursue it as a career.
+                My degree at Louisiana State University had a concentration in data science and analytics, and my GPA was a 3.4 by graduation. I took a variety of electives to round myself out. The two cybersecurity courses I took ultimately drove me to pursue it as a career.
             </p>
         </div>
         <div class="education-block">
