--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Welcome! My name is Jason Williams; I'm a young professional in the information security field with the goal of becoming the biggest "know-it-all" there is. Before college, I was a band geek that was so invested in music that I nearly went to school to major in it. Though my decision changed, it is still one of my passions, and I still play piano in my spare time. My current career goal is to pass the CISSP exam by the end of Summer 2019, and then continue pwning machines on HackTheBox.eu until I think I'm ready to start preparing to be an Offensive Security Certified Professonal (OSCP).
+                        Hello! My name is Jason Williams, and I'm an early profession in the Information Security field that wants to be a "big shot" in the field one day. My passion for the field spawned from my first infosec job at TraceSecurity. Because of TraceSecurity, I self-studied to become a Security+ CE right before I graduated. Just less than a year after graduating, I decided to step my game up and take the CISSP exam, becoming an Associate of (ISC)2 until I meet the experience requirements. My next step is to become more well-versed in Offensive Security-- so I'm diving into as many machines as I can on hackthebox.eu until I feel that I'm ready for the OSCP. Having an offensive mindset is, in my opinion, one of the most valuable traits one could have in the field-- so I look forward to wearing a white hat soon.
                     </p>
                 </div>
             </div>
@@ -83,8 +83,15 @@
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
+        <div data-date="December 2018 - May 2019">
+            <h3>First Information Technology Services</h3>
+            <h4>Information Security Analyst</h4>
+            <p>
+                My role at FITS was to support the FedRAMP certification for Microsoft Azure. FedRAMP is a compliance framework for Cloud Service Providers that want their services to be utilized by government entities. The specific team I worked on operated the "Continuous Monitoring" process, which requires CSPs to scan assets on a monthly basis and report the findings as POA&Ms. Additionally, I utilized my Computer Science background to help automate redundant and time-consuming tasks to help coworkers spend time where it's more needed. I recently wrote (but cannot share) a Python application that utilizes the Azure DevOps Rest API and creates a large list of work items based on variable data.             </p>
+        </div>
+
         <div id="experience-timeline">
-            <div data-date="December 2018 - Present">
+            <div data-date="December 2018 - May 2019">
                 <h3>Defense Point Security</h3>
                 <h4>Junior Cyber Defense Analyst</h4>
                 <p>
