Fixed formatting in bio

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
-        <div data-date="December 2018 - May 2019">
-            <h3>First Information Technology Services</h3>
-            <h4>Information Security Analyst</h4>
-            <p>
-                My role at FITS was to support the FedRAMP certification for Microsoft Azure. FedRAMP is a compliance framework for Cloud Service Providers that want their services to be utilized by government entities. The specific team I worked on operated the "Continuous Monitoring" process, which requires CSPs to scan assets on a monthly basis and report the findings as POA&Ms. Additionally, I utilized my Computer Science background to help automate redundant and time-consuming tasks to help coworkers spend time where it's more needed. I recently wrote (but cannot share) a Python application that utilizes the Azure DevOps Rest API and creates a large list of work items based on variable data.             </p>
-        </div>
-
         <div id="experience-timeline">
+            <div data-date="May 2019 - Present">
+                <h3>First Information Technology Services</h3>
+                <h4>Information Security Analyst</h4>
+                <p>
+                    My role at FITS was to support the FedRAMP certification for Microsoft Azure. FedRAMP is a compliance framework for Cloud Service Providers that want their services to be utilized by government entities. The specific team I worked on operated the "Continuous Monitoring" process, which requires CSPs to scan assets on a monthly basis and report the findings as POA&Ms. Additionally, I utilized my Computer Science background to help automate redundant and time-consuming tasks to help coworkers spend time where it's more needed. I recently wrote (but cannot share) a Python application that utilizes the Azure DevOps Rest API and creates a large list of work items based on variable data.             
+                </p>
+            </div>
             <div data-date="December 2018 - May 2019">
                 <h3>Defense Point Security</h3>
                 <h4>Junior Cyber Defense Analyst</h4>
