Fixed spelling/grammar errors

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>TraceSecurity</h3>
                 <h4>Associate Information Security Analyst</h4>
                 <p>
-                    My role at TraceSecurity was to provide various cybersecurity services to a client-base predominately in the financial sector. This team would assist clients with security awareness by performing social engineering and phishing campaigns as well as assigning post-test training through a web application. We assisted clients with installing and using TraceSecurity's proprietary vulnerability scanning software. If a customer had an online presence, we would conduct penetration tests against external systems to look for vulnerabilities in the applications. Lastly, we would provide clients with a policy review to ensure that they were ISO-compliant.
+                    My role at TraceSecurity was to provide various cybersecurity services to a client-base predominantly in the financial sector. This team would assist clients with security awareness by performing social engineering and phishing campaigns as well as assigning post-test training through a web application. We assisted clients with installing and using TraceSecurity's proprietary vulnerability scanning software. If a customer had an online presence, we would conduct penetration tests against external systems to look for vulnerabilities in the applications. Lastly, we would provide clients with a policy review to ensure that they were ISO-compliant.
                 </p>
             </div>
 
@@ -129,12 +129,14 @@
             </p>
         </div>
         <div class="education-block">
+            <h3>(ISC)2</h3>
+            <span class="education-date">November 2019 - November 2020</span>
+            <h4>Associate of (ISC)2 towards CISSP</h4>
+        </div>
+        <div class="education-block">
             <h3>CompTIA</h3>
             <span class="education-date">August 2018 - August 2021</span>
             <h4>Security+ CE</h4>
-            <p>
-                Just before my last semester of college, I completed the Security+ certification to broaden my skills and make myself more marketable.
-            </p>
         </div>
         <!-- End .education-block -->
     </div>
@@ -152,7 +154,7 @@
                     <div class="project-info">
                         <h3>Budget Master</h3>
                         <p>
-                            The most notable project I completed during school was an Android-based budgeting app. This app would allow users to create a budget for various categories and track how much money is being spent per category. We even thought about security </b>before</b> production, implementing a PIN authentation as well as challenge questions.
+                            The most notable project I completed during school was an Android-based budgeting app. This app would allow users to create a budget for various categories and track how much money is being spent per category. We even thought about security </b>before</b> production, implementing a PIN authentication  as well as challenge questions.
                         </p>
                         <a href="https://github.com/scinerio/BudgetMaster">View Project</a>
                     </div>
@@ -168,7 +170,7 @@
                     <div class="project-info">
                         <h3>Hue4You</h3>
                         <p>
-                            In a course titled "Programming Digital Media," I created a web-based Javascript application that tests the brain by coloring a word like "brown" or "yellow" with an entirely different color, and the player had to select the button on a controller that was the colored with the color of the word, not the fill color. The controller was made with an Arduino, the graphics were made with Tone.js API, and the music was made using the Tone.js API.
+                            In a course titled "Programming Digital Media," I created a web-based Javascript application that tests the brain by coloring a word like "brown" or "yellow" with an entirely different color, and the player had to select the button on a hand-made arduino controller that was the color with the color of the word, not the color that it's filled with. The controller was made with an Arduino, the graphics were made with Tone.js API, and the music was made using the Tone.js API.
                         </p>
                         <a href="https://github.com/scinerio/Hue4You">View Project</a>
                     </div>
