Added certs, FITS description

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello! My name is Jason Williams, and I'm an early profession in the Information Security field that wants to be a "big shot" in the field one day. My passion for the field spawned from my first infosec job at TraceSecurity. Because of TraceSecurity, I self-studied to become a Security+ CE right before I graduated. Just less than a year after graduating, I decided to step my game up and take the CISSP exam, becoming an Associate of (ISC)2 until I meet the experience requirements. My next step is to become more well-versed in Offensive Security-- so I'm diving into as many machines as I can on hackthebox.eu until I feel that I'm ready for the OSCP. Having an offensive mindset is, in my opinion, one of the most valuable traits one could have in the field-- so I look forward to wearing a white hat soon.
+                        Hi, welcome to my portfolio website! I'm a passionate information security professional with a growing interesting in penetration testing, application security, and cloud technologies. My highest priority is to continuously grow in the field and work towards gaining knowledge in the areas previously mentioned (all through it doesn't stop with those). Hopefully my growing list of certifications can serve as evidence of my love for the field. Anyway, thanks for stopping by and hope to hear from you if you have any roles that I might be a good fit for. 
                     </p>
                 </div>
             </div>
@@ -88,7 +88,19 @@
                 <h3>First Information Technology Services</h3>
                 <h4>Information Security Analyst</h4>
                 <p>
-                    My role at FITS was to support the FedRAMP certification for Microsoft Azure. FedRAMP is a compliance framework for Cloud Service Providers that want their services to be utilized by government entities. The specific team I worked on operated the "Continuous Monitoring" process, which requires CSPs to scan assets on a monthly basis and report the findings as POA&Ms. Additionally, I utilized my Computer Science background to help automate redundant and time-consuming tasks to help coworkers spend time where it's more needed. I recently wrote (but cannot share) a Python application that utilizes the Azure DevOps Rest API and creates a large list of work items based on variable data.             
+                    My role at FITS has been varying over time. The first few months were spent reviewing the vulnerability scan findings for Microsoft's entire Azure team (so many scans!). More specifically, I would write deviation requests that Azure would provide to FedRAMP to provide a clear indication of whether of not a scan finding is legitimate, scored properly, or unfixable by Azure (i.e. the vendor has not provided patches).
+                </p>
+                <p>
+                    After this, I was the technical lead for a six month long technical privacy assessment of Microsoft Office products to identify any areas where personal data or the controls around it behaved unexpectedly. This project required knowledge of how to capture and review network traffic from iOS, Androd, Windows, and MacOS devices. Additional efforts were spent using automation tools (python and bash tools mostly) to sift through ~100 GB of telemetry data to ensure no personal data was colleted beyond the restrictions set in the Office Administration settings. The NDA prevents the findings from being shared, but Microsoft's engineering teams responded very quickly to any potential issues.
+                </p>
+                <p>
+                    With my growing interest in penetration testing, I began self studying to meet the requirements to perform penetration tests on the FITS 3PAO team, acquiring the OSCP and GMOB certifications within about 6 months.
+                </p>
+                <p>
+                    Since we don't have penetration tests queued up for me full time, I've been working as a Cloud Security Engineer for a FedRAMP cloud in Azure that we manage for Software AG Government. I've provided useful security alerts and dashboards to ensure that we have a high level of insight of potential threats to the environment. I'm also responsible for monthly vulnerability scanning and remediation, as well as providing guidance for cloud administration decisions from an offensive security perspective.
+                </p>
+                <p>
+                    P.S. My explicit interest in becoming a security expert was obvious enough to FITS that I was promoted up two levels at once to match the skills I acquired in just one year.
                 </p>
             </div>
             <div data-date="December 2018 - May 2019">
@@ -124,6 +136,16 @@
             <h3>Louisiana State University</h3>
             <span class="education-date">August 2014 - December 2018</span>
             <h4>Bachelor of Science in Computer Science</h4>
+        </div>
+        <div class="education-block">
+            <h3>Offensive Security</h3>
+            <span class="education-date">March 2020</span>
+            <h4>Offensive Security Certified Professional (OSCP)</h4>
+        </div>
+        <div class="education-block">
+            <h3>GIAC</h3>
+            <span class="education-date">March 2020</span>
+            <h4>GIAC Mobile Device Security Analyst (GMOB))</h4>
         </div>
         <div class="education-block">
             <h3>(ISC)2</h3>
