phrasing in introduction

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, welcome to my portfolio website! I'm a passionate information security professional with a growing interesting in penetration testing, application security, and cloud technologies. My highest priority is to continuously grow in the field and work towards gaining knowledge in the areas previously mentioned (all through it doesn't stop with those). Hopefully my growing list of certifications can serve as evidence of my love for the field. Anyway, thanks for stopping by and hope to hear from you if you have any roles that I might be a good fit for. 
+                        Hi, welcome to my portfolio website! I'm a passionate information security professional with a current and constantly increasing interest in penetration testing, application security, and cloud technologies. My highest priority is to become an industry expert in these areas (and others of course, but I really like these three). One of my biggest considerations in choosing an employer is being provided resources to become an expert, whether that be through pursuing certifications or working closely with current security experts. Anyway, thanks for stopping by and hope to hear from you if you have any roles that I might be a good fit for. 
                     </p>
                 </div>
             </div>
