--- a/index.html
+++ b/index.html
@@ -138,24 +138,24 @@
             <h4>Bachelor of Science in Computer Science</h4>
         </div>
         <div class="education-block">
-            <h3>Offensive Security</h3>
+            <h3>Offensive Security Certified Professional (OSCP)</h3>
             <span class="education-date">March 2020</span>
-            <h4>Offensive Security Certified Professional (OSCP)</h4>
+            <h4>Offensive Security</h4>
         </div>
         <div class="education-block">
-            <h3>GIAC</h3>
+            <h3>GIAC Mobile Device Security Analyst (GMOB)</h3>
             <span class="education-date">March 2020</span>
-            <h4>GIAC Mobile Device Security Analyst (GMOB))</h4>
+            <h4>GIAC</h4>
         </div>
         <div class="education-block">
-            <h3>(ISC)2</h3>
+            <h3>Associate CISSP</h3>
             <span class="education-date">November 2019 - November 2020</span>
-            <h4>Associate of (ISC)2 towards CISSP</h4>
+            <h4>(ISC)2</h4>
         </div>
         <div class="education-block">
-            <h3>CompTIA</h3>
+            <h3>Security+ CE</h3>
             <span class="education-date">August 2018 - August 2021</span>
-            <h4>Security+ CE</h4>
+            <h4>CompTIA</h4>
         </div>
         <!-- End .education-block -->
     </div>
