--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
         <div class="education-block">
             <h3>GIAC Mobile Device Security Analyst (GMOB)</h3>
-            <span class="education-date">March 2020</span>
+            <span class="education-date">August 2020 - August 2024</span>
             <h4>GIAC</h4>
         </div>
         <div class="education-block">
